# YellowcakeIDE-Anchovy

./: Cargo.toml  Cargo_backup.toml  Cargo_test.toml  LICENSE  README.md  build.bat  build.sh  debug_tokens.rs  libast.rlib  runtime.c  simple_test.rs  test.yelcake  test_c.c  test_compiler.rs  test_cpp.cpp  test_java.java  test_javascript.js  test_python.py  test_rust.rs  test_yellercake.yelcake
